[gd_scene load_steps=7 format=3 uid="uid://dpw256kf8oe84"]

[ext_resource type="Script" path="res://game_state/dungeon/dungeon.gd" id="1_pqnat"]
[ext_resource type="PackedScene" uid="uid://b7ty05m56ksow" path="res://snake_engine/main.tscn" id="3_waiuv"]
[ext_resource type="PackedScene" uid="uid://wlhnyhesiauy" path="res://ui/camera/follow_camera.tscn" id="4_qb1ah"]
[ext_resource type="PackedScene" uid="uid://gfsecx2r220q" path="res://levels/template/room_mapper.tscn" id="5_jia6d"]
[ext_resource type="PackedScene" uid="uid://cgi8lrxrspnn8" path="res://ui/gba_ui/gba_ui.tscn" id="6_hwwjh"]
[ext_resource type="PackedScene" uid="uid://bnjk6212auow8" path="res://ui/game_announcer/game_announcer.tscn" id="8_hmc5f"]

[node name="Dungeon" type="Node" node_paths=PackedStringArray("game_ui")]
script = ExtResource("1_pqnat")
game_ui = NodePath("CanvasLayer/GBAUI")

[node name="Main" parent="." node_paths=PackedStringArray("follow_camera", "gamemode_node") instance=ExtResource("3_waiuv")]
unique_name_in_owner = true
follow_camera = NodePath("../FollowCamera")
gamemode_node = NodePath("..")

[node name="FollowCamera" parent="." node_paths=PackedStringArray("main_node", "gamemode_node") instance=ExtResource("4_qb1ah")]
unique_name_in_owner = true
main_node = NodePath("../Main")
gamemode_node = NodePath("..")

[node name="room_mapper" parent="." instance=ExtResource("5_jia6d")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameAnnouncer" parent="CanvasLayer" instance=ExtResource("8_hmc5f")]
unique_name_in_owner = true

[node name="GBAUI" parent="CanvasLayer" node_paths=PackedStringArray("main_node") instance=ExtResource("6_hwwjh")]
main_node = NodePath("../../Main")

[editable path="CanvasLayer/GameAnnouncer"]
[editable path="CanvasLayer/GameAnnouncer/DungeonArrowNorth"]
[editable path="CanvasLayer/GameAnnouncer/DungeonArrowEast"]
[editable path="CanvasLayer/GameAnnouncer/DungeonArrowSouth"]
[editable path="CanvasLayer/GameAnnouncer/DungeonArrowWest"]
